css/parser/tests/errors/hash/output.stderr
error: Expected "}"

error: Expected Declaration value
 --> $DIR/tests/errors/hash/input.css:2:11
  |
2 |     prop: #
  |           ^

